--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
             <span>💻 <a href="https://github.com/HR1937" target="_blank">github.com/HR1937</a></span>
         </div>
         <div class="contact-info">
-            <span>🌐 <a href="https://yourportfolio.dev" target="_blank">yourportfolio.dev</a></span>
-            <span>⭐ <a href="https://fiverr.com/yourprofile" target="_blank">fiverr.com/yourprofile</a></span>
-            <span>🎯 <a href="https://upwork.com/yourprofile" target="_blank">upwork.com/yourprofile</a></span>
+            <span>🌐 <a href="https://portfoliowebsitefreel.vercel.app/" target="_blank">Portfolio</a></span>
+            <span>⭐ <a href="https://fiverr.com/yourprofile" target="_blank">Fiverr</a></span>
+            <span>🎯 <a href="https://upwork.com/yourprofile" target="_blank">Upwork</a></span>
         </div>
         <div class="tagline">Freelance Full-Stack Developer | Rapid MVP Delivery | Client-Focused Solutions</div>
         <div class="availability">🟢 Available for Freelance Projects</div>
     </header>
 
     <section>
-        <h2>Professional Summary</h2>
+        <h2>Expertise</h2>
         <p class="summary">
             Freelance full-stack developer delivering fast, reliable web solutions for startups and small businesses. 
             Focused on landing pages, dashboards, MVPs, and rapid prototypes. 
@@ -197,7 +197,7 @@
 
 <div class="project">
     <div class="project-header">
-        <div class="project-title">Netflix UI Clone (Portfolio)</div>
+        <div class="project-title">Netflix UI Clone</div>
         <div class="project-meta">Jan 2025</div>
     </div>
     <div class="project-tech">HTML, CSS, Responsive Design</div>
