--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <span>💻 <a href="https://github.com/HR1937" target="_blank">github.com/HR1937</a></span>
         </div>
         <div class="contact-info">
-            <span>🌐 <a href="https://portfoliowebsitefreel.vercel.app/" target="_blank">Portfolio</a></span>
+            <span>🌐 <a href="https://hetvi-purohit-portfolio-website-freel.vercel.app/" target="_blank">Portfolio</a></span>
             <span>⭐ <a href="https://fiverr.com/yourprofile" target="_blank">Fiverr</a></span>
             <span>🎯 <a href="https://upwork.com/yourprofile" target="_blank">Upwork</a></span>
         </div>
